kubernetes/apps/netbird/base/middleware-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: netbird-cors
  namespace: netbird
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "Authorization"
      - "Content-Type"
      - "Accept"
      - "Origin"
    accessControlAllowOriginList:
      - "https://netbird.trai.ch"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
