kubernetes/apps/netbird/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbird-dashboard
